finish cursed chorus and start upthrust enchant

--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -3,5 +3,7 @@
   "item.enderism.cursed_chorus_fruit.bound": "Bound to: %s",
   "item.enderism.cursed_chorus_fruit.unbound": "Unbound",
 
-  "block.enderism.chorus_magnetite": "Chorus Magnetite"
+  "block.enderism.chorus_magnetite": "Chorus Magnetite",
+
+  "subtitle.enderism.cursed_chorus_bind": "Cursed Chorus Fruit binds"
 }
