finish 0.1.0 beta, prepare for beta release

--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -5,5 +5,9 @@
 
   "block.enderism.chorus_magnetite": "Chorus Magnetite",
 
+  "enchantment.enderism.upthrust": "Upthrust",
+  "enchantment.enderism.aerodynamics": "Aerodynamics",
+  "enchantment.enderism.shackling_curse": "Curse of Shackling",
+
   "subtitle.enderism.cursed_chorus_bind": "Cursed Chorus Fruit binds"
 }
