work on mod integration (will move to a seperate api eventually maybe)

--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -9,6 +9,8 @@
   "item.minecraft.splash_potion.effect.void_recall_long": "Lengthened Splash Potion of Void Recalling",
   "item.minecraft.lingering_potion.effect.void_recall_short": "Lingering Potion of Void Recalling",
   "item.minecraft.lingering_potion.effect.void_recall_long": "Lengthened Lingering Potion of Void Recalling",
+  "item.minecraft.tipped_arrow.effect.void_recall_short": "Tipped Arrow of Void Recalling",
+  "item.minecraft.tipped_arrow.effect.void_recall_long": "Lengthened Tipped Arrow of Void Recalling",
 
 
   "block.enderism.chorus_magnetite": "Chorus Magnetite",
