oh boy what to do

--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -30,6 +30,7 @@
 
   "effect.enderism.void_recall": "Void Recall",
   "effect.enderism.choruskirmish": "Choruskirmish",
+  "effect.enderism.end_poison": "End Poisoning",
 
   "subtitle.enderism.cursed_chorus_bind": "Cursed Chorus Fruit binds",
   "subtitle.enderism.fibrous_chorus_bounce": "Fibrous Chorus bounces"
