--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -1,11 +1,15 @@
 {
+  "enderism.generic_terms.at": "at",
+
   "item.enderism.cursed_chorus_fruit": "Cursed Chorus Fruit",
-  "item.enderism.cursed_chorus_fruit.bound": "§7Bound to: %s",
+  "item.enderism.cursed_chorus_fruit.bound": "§7Bound to: ",
   "item.enderism.cursed_chorus_fruit.unbound": "§7Unbound",
 
   "item.enderism.end_stone_charm": "End Stone Charm",
   "item.enderism.purpur_charm": "Purpur Charm",
   "item.enderism.obsidian_charm": "Obsidian Charm",
+
+  "item.enderism.shulker_shellmet": "Shulker Shellmet",
 
   "item.minecraft.potion.effect.void_recall_short": "Potion of Void Recalling",
   "item.minecraft.potion.effect.void_recall_long": "Lengthened Potion of Void Recalling",
