--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -46,7 +46,8 @@
   "subtitle.enderism.cursed_chorus_bind": "Cursed Chorus Fruit binds",
   "subtitle.enderism.fibrous_chorus_bounce": "Fibrous Chorus bounces",
 
-  "desc.song.enderism.megalovania": "Song of Willpower",
+  "name.song.enderism.megalovania": "Song of Willpower",
+  "name.song.enderism.rushe": "Song of Speed",
 
   "context.enderism.music_sheet_missing": "Music Sheet was not found!"
 }
