--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -49,6 +49,11 @@
   "item.enderism.pirpell_plated_netherite_axe": "Pirpell-Plated Netherite Axe",
   "item.enderism.pirpell_plated_netherite_hoe": "Pirpell-Plated Netherite Hoe",
 
+  "item.enderism.ancient_plated_netherite_helmet": "Ancient-Plated Netherite Helmet",
+  "item.enderism.ancient_plated_netherite_chestplate": "Ancient-Plated Netherite Chestplate",
+  "item.enderism.ancient_plated_netherite_leggings": "Ancient-Plated Netherite Leggings",
+  "item.enderism.ancient_plated_netherite_boots": "Ancient-Plated Netherite Boots",
+
   "trim_material.enderism.pirpell": "Pirpell Material",
   "trim_material.enderism.sculk_spine": "Sculk Spine Material",
 
