--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -70,6 +70,8 @@
   "enchantment.enderism.upthrust": "Upthrust",
   "enchantment.enderism.shackling_curse": "Curse of Shackling",
   "enchantment.enderism.velocity_protection": "Velocity Protection",
+  "enchantment.enderism.pearling": "Pearling",
+  "enchantment.enderism.cannoning": "Cannonning",
 
   "effect.enderism.void_recall": "Void Recall",
   "effect.enderism.choruskirmish": "Choruskirmish",
