i did stuff and forgot to push lol

--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -72,6 +72,7 @@
   "enchantment.enderism.velocity_protection": "Velocity Protection",
   "enchantment.enderism.pearling": "Pearling",
   "enchantment.enderism.cannoning": "Cannonning",
+  "enchantment.enderism.quick_strike": "Quick Strike",
 
   "effect.enderism.void_recall": "Void Recall",
   "effect.enderism.choruskirmish": "Choruskirmish",
