--- a/src/main/resources/assets/enderism/lang/en_us.json
+++ b/src/main/resources/assets/enderism/lang/en_us.json
@@ -61,6 +61,8 @@
   "block.enderism.fibrous_chorus": "Fibrous Chorus",
   "block.enderism.chorus_fruit_pie": "Chorus Fruit Pie",
 
+  "block.enderism.bamboo_spike": "Bamboo Spike",
+
   "item.enderism.music_sheet": "Music Sheet",
   "item.enderism.instrument": "Instrument",
   "item.enderism.purpur_flute": "Purpur Flute",
@@ -74,10 +76,14 @@
   "enchantment.enderism.pearling": "Pearling",
   "enchantment.enderism.cannoning": "Cannonning",
   "enchantment.enderism.quick_strike": "Quick Strike",
+  "enchantment.enderism.retributive": "Retributive",
+  "enchantment.enderism.multiclip": "Multiclip",
+  "enchantment.enderism.sniping": "Sniping",
 
   "effect.enderism.void_recall": "Void Recall",
   "effect.enderism.choruskirmish": "Choruskirmish",
   "effect.enderism.silencing": "Silencing",
+  "effect.enderism.retribution": "Retribution",
 
   "subtitle.enderism.cursed_chorus_bind": "Cursed Chorus Fruit binds",
   "subtitle.enderism.fibrous_chorus_bounce": "Fibrous Chorus bounces",
@@ -112,6 +118,11 @@
   "tooltip.ancient_upgrade.base": "Add Netherite Armor Piece",
   "tooltip.ancient_upgrade.additions": "Add Ancient Scrap",
 
+  "death.attack.bamboo_spike": "%s was pierced by a spike",
+  "death.attack.retribution": "%s got what was coming to them",
+
+  "text.enderism.multiclip_loaded_count": "Loaded Projectiles: %s",
+
   "advancement.enderism.charming.title": "Charming",
   "advancement.enderism.charming.desc": "Use any Charm",
   "advancement.enderism.unfinished_symphony.title": "Unfinished Symphony",
@@ -133,5 +144,21 @@
   "advancement.enderism.fibrous_chorus.title": "Cue the Cartoon Sound Effects",
   "advancement.enderism.fibrous_chorus.desc": "Bounce on Fibrous Chorus",
   "advancement.enderism.bad_charms.title": "I can't believe you've done this.",
-  "advancement.enderism.bad_charms.desc": "Use Wanderer's Charms containing every negative vanilla effect"
+  "advancement.enderism.bad_charms.desc": "Use Wanderer's Charms containing every negative vanilla effect",
+
+  "enchantment.enderism.aerodynamic.desc": "Causes Elytra gliding to be faster",
+  "enchantment.enderism.upthrust.desc": "Causes Elytra gliding to gain more height when going upwards",
+  "enchantment.enderism.shackling_curse.desc": "Prevents Elytra usage",
+  "enchantment.enderism.velocity_protection.desc": "Decreases damage taken from kinetic energy",
+  "enchantment.enderism.pearling.desc": "Allows Ender Pearls to be loaded into Crossbows",
+  "enchantment.enderism.cannoning.desc": "Allows TNT to be loaded into Crossbows",
+  "enchantment.enderism.quick_strike.desc": "Increases attack speed on weapons",
+  "enchantment.enderism.retributive.desc": "Inflicts Retribution on the hit opponent, however inhibiting the crossbows ability to load Fireworks",
+  "enchantment.enderism.multiclip.desc": "Loads multiple shots at once, however increasing loading times",
+  "enchantment.enderism.sniping.desc": "Increases Speed and Power of arrows shot, dealing more damage based on how far the shot was taken from the hit point",
+
+  "effect.enderism.choruskirmish.desc": "Gives users a small chance to spontaneously teleport when hit",
+  "effect.enderism.silencing.desc": "Causes user to emit no vibrations",
+  "effect.enderism.void_recall.desc": "Telports user back to safety after falling off of The End",
+  "effect.enderism.retribution.desc": "Damages users a fraction based on how much damage they deal during the effects duration"
 }
